bug #36908: checking in for endico, r=scc, a=brendan